syntax="proto3";

package calcpb;

option go_package ="./calcpb";

message AdditionRequestFromUser{
    int32 FirstNumber=1;
    int32 SecondNumber=2;
    int32 Operation=3;
} 

message AdditionResponseFromServer{
    int32 FirstNum =1;
    int32 SecondNum=2;
    int32 Sum=3;
}

service Services{
    rpc ChatService(AdditionRequestFromUser)returns(stream AdditionResponseFromServer){};
}